web/Tolstoy.css
/* ... */
.gwt-DialogBox .dialogContent {
}

.gwt-DialogBox .dialogMiddleCenter {
    padding: 3px;
    background: white;
}

.gwt-DialogBox .dialogBottomCenter {
    background: url(images/hborder.png) repeat-x 0px -2945px;
}

.gwt-DialogBox .dialogMiddleLeft {
    background: url(images/vborder.png) repeat-y -31px 0px;
}

.gwt-DialogBox .dialogMiddleRight {
    background: url(images/vborder.png) repeat-y -32px 0px;
}

.gwt-DialogBox .dialogTopLeftInner {
    width: 10px;
    height: 8px;
    zoom: 1;
}

.gwt-DialogBox .dialogTopRightInner {
    width: 12px;
    zoom: 1;
}

.gwt-DialogBox .dialogBottomLeftInner {
    width: 10px;
    height: 12px;
    zoom: 1;
}

.gwt-DialogBox .dialogBottomRightInner {
    width: 12px;
    height: 12px;
    zoom: 1;
}

.gwt-DialogBox .dialogTopLeft {
    background: url(images/circles.png) no-repeat -20px 0px;

}

.gwt-DialogBox .dialogTopRight {
    background: url(images/circles.png) no-repeat -28px 0px;

}

.gwt-DialogBox .dialogBottomLeft {
    background: url(images/circles.png) no-repeat 0px -36px;

}

.gwt-DialogBox .dialogBottomRight {
    background: url(images/circles.png) no-repeat -8px -36px;
}

* html .gwt-DialogBox .dialogTopLeftInner {
    width: 10px;
    overflow: hidden;
}

* html .gwt-DialogBox .dialogTopRightInner {
    width: 12px;
    overflow: hidden;
}

* html .gwt-DialogBox .dialogBottomLeftInner {
    width: 10px;
    height: 12px;
    overflow: hidden;
}

* html .gwt-DialogBox .dialogBottomRightInner {
    width: 12px;
    height: 12px;
    overflow: hidden;
}

.in_development {

    text-align: left;
    font-size: 0.7em;
    font-weight: 100;
    font-family: 'Open Sans', sans-serif;
    color: #aba8ab;;

}

.chronology_panel {

}

.index_panel_style {

    /*background: #f5ad72 url(images/old_diary.png) no-repeat center center fixed;*/

    /*-webkit-background-size: cover;*/
    /*-moz-background-size: cover;*/
    /*-o-background-size: cover;*/
    /*background-size: cover;*/

    background: transparent;

    height: 100%;
       overflow: auto;    
}

/*.comment_panel_style {*/

    /*background: whitesmoke url(images/bckg-comment.jpg) no-repeat center center fixed;*/

    /*-webkit-background-size: cover;*/
    /*-moz-background-size: cover;*/
    /*-o-background-size: cover;*/
    /*background-size: cover;*/

/*}*/

.intro_image {

    width: 92%;
    padding-left: 2.5em;

}

.content_base {

    /*position: absolute;*/
    /*top: 0;*/
    /*left: 0;*/
    width: 100%;
    height: 100vh;
       overflow: auto;
}

.initial_background {

    /*-webkit-transition: width 3s;*/
    /*transition: width 3s;*/
    background: url(Tolstoy_004_bkg.png) no-repeat center center fixed;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

}

.intro_background {

    /*!*-webkit-transition: width 3s;*!*/
    /*!*transition: width 3s;*!*/
    /*background: #f5ad72 url(images/old_diary.png) no-repeat center center fixed;*/

    /*-webkit-background-size: cover;*/
    /*-moz-background-size: cover;*/
    /*-o-background-size: cover;*/
    /*background-size: cover;*/

    background-image: linear-gradient(#007c77, #00908b, #dcf0e0);

}

.search_background {

    background: whitesmoke;

}

.comment_background {

    /*-webkit-transition: width 3s;*/
    /*transition: width 3s;*/
    background: #f5d0c4 url(images/bckg-comment.jpg) no-repeat center center fixed;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

}

.enter_circle {

    stroke: #008e83;
    fill: #007a6f;
    opacity: .75;
}

.enter_text {

    fill: #f8a600;
    /*stroke: #f8a600;*/
    font-family: 'Abel', sans-serif;

    font-size: 1.6em;
    pointer-events: none;
    text-anchor: middle;
    dominant-baseline: central;
}

.circleContainer {
    /*margin-top: 1em;*/
    position: absolute;
    right: 10vh;
    bottom: 15vh;
    width: 120px;
    height: 120px;
    cursor: pointer;
}

.disqus_comment {

    margin-top: 10em;
    margin-left: 5em;
    margin-right: 5em;
    height: 20em;
}

.index_vertical {

    text-align: center;

}

.index_panel_scroll {

    width: 50%;
    float: right;

    scroll-behavior: smooth;

}

.scrollPanel_smooth {

    scroll-behavior: smooth;
}

.comment_main {
      height: 100%;
      overflow: auto;
}

.feedback_panel {

    width: 100%;
    background-color: white;

}

.feedback_disabled {

     font: 0.8em "Open Sans", sans-serif;
        font-weight: lighter;
        color: #007c77;
}

.options_tab {

    margin-top: 1vh;
    font: 0.8em "Open Sans", sans-serif;
    font-weight: lighter;
    font-variant: small-caps;
    color: #007c77;

    border-style: solid;
    border-width: thin;
    border-color: lightgray;

    border-bottom: none;

    border-top-left-radius: 10px 5px;
    border-top-right-radius:  10px 5px;
    padding: 3px;

    white-space:nowrap;
    display: inline-block;

    -webkit-user-select: none; /* Safari 3.1+ */
    -moz-user-select: none; /* Firefox 2+ */
    -ms-user-select: none; /* IE 10+ */
    user-select: none; /* Standard syntax */


}

.options_tab_sel {

    background-color: white;
}

.deck_panel_for_options {
    
    background-color: white;
    height: 90vh;
    width: 100%;

}

